<resources>
    <string name="app_name">NasaPicture</string>
    <string name="search_in_wiki">Искать в Википедии</string>
    <string name="favourite" translatable="false">favourite</string>
    <string name="settings" translatable="false">settings</string>
    <string name="search" translatable="false">Search</string>
    <string name="today">Сегодня</string>
    <string name="tdby" translatable="false">Позавчера</string>
    <string name="yesterday">Вчера</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="green_theme">Зелёная тема</string>
    <string name="seetings_header">Выбор темы</string>
    <string name="light_theme">Светлая тема</string>
    <string name="test">Systezm</string>



    <string name="close_approach_data_title">Дата макс. сближения</string>
    <string name="absolute_magnitude_title">Абсолютная величина</string>
    <string name="estimated_diameter_title">Расчётный диаметр км</string>
    <string name="relative_velocity_title">Скорость км/ч</string>
    <string name="distance_from_earth_title">Расстояние до Земли км</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="title_asteroid">title_asteroid</string>
    <string name="asteroid_hazard_image">Asteroid Hazard Image</string>
    <string name="daily_photo">Фото дня</string>
    <string name="mars">Марс</string>
    <string name="earth">Земля</string>
    <string name="asteroids">Астеройды</string>
    <string name="settings_title">Настройки</string>
    <string name="imageViewProgress">imageViewProgress</string>
    <string name="Image_Description">Описание фото:</string>
    <string name="Coordinates">Координаты:</string>
    <string name="Camera">Камера:</string>
    <string name="Launch_date">Дата запуска:</string>
    <string name="Landing_date">Дата приземления:</string>
    <string name="imgStatusHazardous">imgStatusHazardous</string>
    <string name="floating_action_button">floatingActionButton</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
</resources>