<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/potdMainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabsGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
    </com.google.android.material.tabs.TabLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/wiki_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end_wiki_button"
        android:layout_marginBottom="@dimen/margin_bottom_wiki_button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_layout"
        app:srcCompat="@drawable/wiki_icon" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textInputLayout_margin_top"
        android:hint="@string/search_in_wiki"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/wiki_icon"
        app:endIconMode="custom"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/viewpager_layout_height"
        android:layout_marginTop="@dimen/viewpager_margin_top"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/option_one_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:alpha="0"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/option_container_padding_end"
        android:paddingStart="@dimen/option_container_padding_start"
        android:paddingBottom="@dimen/option_one_container_padding_bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/option_text_margin_end"
            android:text="@string/option_1"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_archive" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/option_two_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:alpha="0"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/option_container_padding_end"
        android:paddingStart="@dimen/option_container_padding_start"
        android:paddingBottom="@dimen/option_two_container_padding_bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/option_text_margin_end"
            android:text="@string/option_2"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:srcCompat="@drawable/ic_send" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin_end"
        android:layout_marginBottom="@dimen/fab_margin_bottom"
        android:elevation="5dp"
        android:contentDescription="@string/floating_action_button" />

    <ImageView
        android:id="@+id/plusImageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_plus_margin_end"
        android:layout_marginBottom="@dimen/fab_plus_margin_bottom"
        android:elevation="10dp"
        app:srcCompat="@drawable/ic_plus_fab" />



</androidx.coordinatorlayout.widget.CoordinatorLayout>